--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -44,10 +44,12 @@
     font-weight: bold;
     color: rgba(0,0,0,0.64);
     text-align: center;
-    min-height: 48px;
+    min-height: 42px;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 0px 4px rgba(0,0,0,0.32);
+    //box-shadow: 0px 0px 4px rgba(0,0,0,0.32);
+    border: 1px solid rgba(0,0,0,0.12);
+    border-radius: 4px;
     z-index: 2;
     border-bottom: 4px solid rgba(0,0,0,0.72);
     background-color: rgba(255,255,255,0.54);
