--- a/src/modules/PartyLoadout/components/CharacterCard/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterCard/index.scss
@@ -7,9 +7,11 @@
 
     background-color: #111;
     background-image: url("https://www.transparenttextures.com/patterns/skulls.png");
+    border: 1px solid rgba(0,0,0,1);
 
 
     // border-radius: 32px 0 0 32px;
+    border-radius: 8px 0 0 8px;
     overflow: hidden;
     border: 1px solid black;
     font-family: 'Roboto', sans-serif;
@@ -48,8 +50,8 @@
                 right: 0;
                 bottom: 0;
                 left: 0;
-                // border-radius: 8px;
-                box-shadow: 0px 1px 2px rgba(0,0,0,1) inset;
+                //border-radius: 8px;
+                box-shadow: 0px 1px 2px rgba(0,0,0,1) inset; 
             }
 
             &--foil {
