--- a/src/modules/PartyLoadout/components/CharacterSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSidebar/index.scss
@@ -1,13 +1,15 @@
 .CharacterSidebar {
     flex: 1;
     overflow-y: auto;
+    padding: 4px;
 
     .CharacterCard {
         min-height: unset;
         height: auto;
-        margin-bottom: 1px;
+        margin-bottom: 4px;
         width: calc(100% - 3px);
         border-bottom-left-radius: 0;
+        border-radius: 8px;
 
         &__body__contents {
             justify-content: space-between;
