--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -42,15 +42,15 @@
     cursor: pointer;
     font-family: 'Roboto', 'sans-serif';
     font-weight: bold;
-    color: rgba(0,0,0,0.64);
+    color: rgba(255,255,255,0.84);
     text-align: center;
     min-height: 42px;
     align-items: center;
     justify-content: center;
     //box-shadow: 0px 0px 4px rgba(0,0,0,0.32);
-    border: 1px solid rgba(0,0,0,0.12);
+    border: 1px solid rgba(255,255,255,0.24);
     border-radius: 4px;
     z-index: 2;
-    border-bottom: 4px solid rgba(0,0,0,0.72);
-    background-color: rgba(255,255,255,0.54);
+    // border-bottom: 4px solid rgba(255,255,255,0.72);
+    background-color: rgba(255,255,255,0.12);
 }
