--- a/src/modules/Battle/index.scss
+++ b/src/modules/Battle/index.scss
@@ -9,10 +9,11 @@
     }
 
     .Room__search {
-        height: 46px;
+        height: 39px;
         line-height: 48px;
         border: 1px solid rgba(0,0,0,0.12);
-        border-right: none;
+        margin-right: 4px;
+        border-radius: 4px;
         width: 290px;
         padding-left: 8px;
     }
