--- a/src/modules/PartyLoadout/components/CharacterSelectSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSelectSidebar/index.scss
@@ -1,11 +1,12 @@
 .CharacterSelectSidebar {
     //background-color: #333;
     background-color: rgba(255,255,255,0.99);
-    border-right: 1px solid rgba(0,0,0,0.12);
+    background-color: rgba(0,0,0,0.84);
+    border-right: 1px solid rgba(0,0,0,1);
     color: white;
     min-height: calc(100% - 0px);
     width: 100px;
-    min-width: 100px;
+    min-width: 120px;
     // padding: 4px;
     display: flex;
     flex-direction: column;
@@ -20,13 +21,14 @@
     .CharacterAvatar {
         box-shadow: none;
         margin-bottom: 4px;
-        width: calc(100% - 2px);
-        border: 1px solid rgba(0,0,0,0.12);
-        border-radius: 8px;
+        width: calc(100% - 0px);
+        // border: 1px solid rgba(0,0,0,0.12);
+        // border-radius: 8px;
+        overflow: hidden;
     }
 
     &__maxedOut {
-        color: rgba(0,0,0,0.54);
+        color: rgba(255,255,255,0.44);
         font-weight: bolder;
         writing-mode: vertical-rl;
         text-orientation: upright;
