--- a/src/modules/Battle/index.scss
+++ b/src/modules/Battle/index.scss
@@ -6,6 +6,7 @@
         display: flex;
         flex: 1;
         height: 100%;
+        background-color: rgba(0,0,0,0.12);
     }
 
     .Room__search {
