--- a/src/modules/Core/TopBar/index.scss
+++ b/src/modules/Core/TopBar/index.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     flex: 1;
-    border-bottom: 1px solid rgba(255,255,255,0.24);
+    // border-bottom: 1px solid rgba(255,255,255,0.24);
     background: rgba(0,0,0,0.84);
     color: white;
 }
