--- a/src/modules/PartyLoadout/index.scss
+++ b/src/modules/PartyLoadout/index.scss
@@ -11,6 +11,7 @@
         padding: 8px;
         height: 100%;
 
-        background: #aaa;
+        background: rgba(0,0,0,0.12);
+        border-top: 1px solid rgba(0,0,0,1);
     }
 }
