front end doesnt need all the objects

--- a/src/modules/PartyLoadout/components/CharacterSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSidebar/index.scss
@@ -2,6 +2,7 @@
     flex: 1;
     overflow-y: auto;
     padding: 4px;
+    color: rgba(255,255,255,0.54);
 
     .CharacterCard {
         min-height: unset;
