--- a/src/modules/PartyLoadout/components/CharacterCard/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterCard/index.scss
@@ -159,7 +159,7 @@
     }
 
     &__sidebar {
-        width: 48px;
+        width: 13%;
         display: flex;
         flex-direction: column;
         padding-top: 44px;
