--- a/src/modules/PartyLoadout/index.scss
+++ b/src/modules/PartyLoadout/index.scss
@@ -13,5 +13,9 @@
 
         background: rgba(0,0,0,0.12);
         border-top: 1px solid rgba(0,0,0,1);
+
+        .CharacterCard {
+            width: 100%;
+        }
     }
 }
