--- a/src/modules/PartyLoadout/components/CharacterCard/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterCard/index.scss
@@ -61,7 +61,7 @@
                 bottom: 0;
                 left: 0;
                 opacity: 0.25;
-                z-index: 4;
+                // z-index: 2;
                 // border-radius: 8px;
 
                 background:
