--- a/src/components/PackItem/index.scss
+++ b/src/components/PackItem/index.scss
@@ -78,6 +78,7 @@
         color: white;
     }
     .PackItem__rarity--BlackMarket {
+        /*
         background:
         radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.15) 30%, rgba(255,255,255,.3) 32%, rgba(255,255,255,0) 33%) 0 0,
         radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.1) 11%, rgba(255,255,255,.3) 13%, rgba(255,255,255,0) 14%) 0 0,
@@ -89,6 +90,13 @@
         background-size: 470px 470px, 970px 970px, 410px 410px, 610px 610px, 530px 530px, 730px 730px, 100% 100%;
         background-color: #840b2a;
         color: white;
+        */
+        background-color: #333;
+        color: white;
+        background-image: url("https://www.transparenttextures.com/patterns/skulls.png");
+        .PackItem__modifiers {
+            background-color: rgba(0,0,0,0.54);
+        }
     }
     .PackItem__stats {
         display: flex;
@@ -123,7 +131,8 @@
         //font-weight: bold;
         letter-spacing: 1px;
         margin-top: 8px;
-    }
+        border-radius: 8px;
+
         .PackItem__modifier--buff {
             color: greenyellow;
             //text-shadow: 1px 1px 1px black;
@@ -134,3 +143,7 @@
             //text-shadow: 1px 1px 1px black;
             margin-bottom: 4px;
         }
+        & > div:last-child {
+            margin-bottom: 0;
+        }
+    }
