--- a/src/modules/PartyLoadout/components/CharacterSelectSidebar/components/CharacterAvatar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSelectSidebar/components/CharacterAvatar/index.scss
@@ -1,13 +1,10 @@
 .CharacterAvatar {
     position: relative;
-    width: calc(100% - 0px);
-    margin: 0 0 0px 0;
+    width: 100%;
     cursor: pointer;
-    // border: 1px solid white;
+    display: flex;
+    justify-content: flex-start;
     box-shadow: -1px 0px 3px rgba(0,0,0,0.89);
-    //border-radius: 4px;
-
-    //border-radius: 16px;
 
     &:after {
         content: '';
