--- a/src/modules/PartyLoadout/components/CharacterSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSidebar/index.scss
@@ -4,6 +4,13 @@
     padding: 4px;
     color: rgba(255,255,255,0.54);
 
+    &__empty {
+        width: 100%;
+        text-align: center;
+        height: 72px;
+        line-height: 72px;
+    }
+
     .CharacterCard {
         min-height: unset;
         height: auto;
