--- a/src/modules/PartyLoadout/components/SessionSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/SessionSidebar/index.scss
@@ -8,18 +8,23 @@
     background: rgba(0,0,0,0.72);
     font-family: 'Roboto', sans-serif;
 
-    &__option {
-        text-align: center;
-        width: 33%;
-        height: 56px;
-        line-height: 56px;
-        cursor: pointer;
-        font-weight: bold;
-        color: rgba(255,255,255,255.72);
+    .TopBar {
+        padding: 0 0px;
+        background: rgba(0,0,0,0.4);
 
-        &.active {
-            border-bottom: 8px solid rgba(255,255,255,0.54);
-            height: calc(100% - 8px)
+        & > div {
+            text-align: center;
+            width: 33%;
+            height: 56px;
+            line-height: 56px;
+            cursor: pointer;
+            font-weight: bold;
+            color: rgba(255,255,255,255.72);
+    
+            &.active {
+                border-bottom: 8px solid rgba(255,255,255,0.54);
+                height: calc(100% - 8px)
+            }
         }
     }
 }
