--- a/src/modules/PartyLoadout/index.scss
+++ b/src/modules/PartyLoadout/index.scss
@@ -1,5 +1,6 @@
-.PartyLoadout {
+.Session {
     display: flex;
+    flex-direction: column;
     width: 100%;   
     height: 100%;
     overflow: hidden;
@@ -9,12 +10,15 @@
     &__main {
         flex: 1;
         display: flex;
-        flex-direction: column;
-        height: 100%;
-
         background: rgba(0,0,0,0.24);
         border-top: 1px solid rgba(0,0,0,1);
+    }
 
+    &__details {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        
         .CharacterCard {
             width: 100%;
             height: 100%;
