new design + character actions

--- a/src/components/PackCharacterItemList/index.scss
+++ b/src/components/PackCharacterItemList/index.scss
@@ -22,7 +22,7 @@
 
             & > div {
                 display: flex;
-                width: 100%;
+                width: calc(100% - 2px);
             }
         }
 
