--- a/src/modules/Core/TopBar/index.scss
+++ b/src/modules/Core/TopBar/index.scss
@@ -1,6 +1,6 @@
 .TopBar {
     padding: 0 16px;
-    height: 56px;
+    min-height: 56px;
     max-height: 56px;
     align-items: center;
     display: flex;
