--- a/src/components/PackItem/index.scss
+++ b/src/components/PackItem/index.scss
@@ -4,24 +4,18 @@
     font-size: 12px;
     text-align: left;
     flex-direction: column;
-    /*box-shadow: inset 0px 0px 0px 2px white;*/
-    //margin: 4px;
-    //border-radius: 4px;
     position: relative;
     overflow: hidden;
-    width: calc(100% - 16px);
+    width: 100%;
     font-family: 'Roboto', sans-serif;
     height: 100%;
-
-
-    //height: calc(100% - 19px);
-
-    box-shadow: 0px 1px 3px rgba(0,0,0,0.4);
+    // box-shadow: 0px 1px 3px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
     box-sizing: border-box;
-    border-bottom: 3px solid white !important;
+    border: 1px solid rgba(255,255,255,0.24) !important;
+    // margin: 1px;
 
     .StatChip {
-        // font-weight: bold;
         display: flex;
         margin-right: 16px;
     }
@@ -50,7 +44,6 @@
         linear-gradient(115deg, transparent 75%, rgba(255,255,255,.05) 75%) 7px -15px,
         linear-gradient(245deg, transparent 75%, rgba(255,255,255,.05) 75%) 7px -15px,
         #3A5894;
-        //background-size: 15px 30px;
         color: white;
     }
     .PackItem__rarity--Masterwork {
@@ -128,19 +121,16 @@
         background-color: rgba(0,0,0,0.46);
         color: black;
         padding: 8px;
-        //font-weight: bold;
         letter-spacing: 1px;
         margin-top: 8px;
         border-radius: 8px;
 
         .PackItem__modifier--buff {
             color: greenyellow;
-            //text-shadow: 1px 1px 1px black;
             margin-bottom: 4px;
         }
         .PackItem__modifier--debuff {
             color: lightcoral;
-            //text-shadow: 1px 1px 1px black;
             margin-bottom: 4px;
         }
         & > div:last-child {
