--- a/src/modules/PartyLoadout/components/CharacterSelectSidebar/components/CharacterAvatar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSelectSidebar/components/CharacterAvatar/index.scss
@@ -4,17 +4,23 @@
     cursor: pointer;
     display: flex;
     justify-content: flex-start;
-    box-shadow: -1px 0px 3px rgba(0,0,0,0.89);
+    box-sizing: border-box;
+    border: 1px solid rgba(255,255,255,0.24);
 
     &:after {
         content: '';
         display: block;
+        box-sizing: border-box;
         padding-bottom: 100%;
     }
 
     &__content {
         position: absolute;
-        width: 100%;
-        height: 100%;
+        box-sizing: border-box;
+        box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
+        width: calc(100% - 0px);
+        height: calc(100% - 0px);
+        //top: 1px;
+        //left: 1px;
     }
 }
