--- a/src/modules/PartyLoadout/components/CharacterSelectSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSelectSidebar/index.scss
@@ -6,6 +6,7 @@
     color: white;
     width: 100%;
     min-height: 120px;
+    max-height: 120px;
     // padding: 4px;
     display: flex;
 
@@ -21,7 +22,6 @@
         // margin: 2px;
         // border: 1px solid rgba(0,0,0,0.12);
         // border-radius: 8px;
-        border-left: 1px solid black;
         overflow: hidden;
     }
 
