--- a/src/modules/PartyLoadout/components/ItemSelectSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/ItemSelectSidebar/index.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    max-height: 100%;
+    overflow: auto;
 
     & > div > button {
         padding: 4px;
@@ -34,7 +36,8 @@
 
     .Pack_Item {
         & > div {
-            width: 100%;
+            width: calc(100% - 2px);
+            margin-bottom: 8px;
         }
     }
 }
