--- a/src/modules/PartyLoadout/components/SessionSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/SessionSidebar/index.scss
@@ -4,13 +4,15 @@
     min-width: 407px;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
     background: rgba(0,0,0,0.72);
     font-family: 'Roboto', sans-serif;
 
     .TopBar {
         padding: 0 0px;
         background: rgba(0,0,0,0.4);
+        border-bottom: 1px solid black;
 
         & > div {
             text-align: center;
