--- a/src/modules/PartyLoadout/index.scss
+++ b/src/modules/PartyLoadout/index.scss
@@ -12,16 +12,20 @@
         display: flex;
         background: rgba(0,0,0,0.24);
         border-top: 1px solid rgba(0,0,0,1);
+        max-height: calc(100% - 56px);
+        min-height: calc(100% - 56px);
     }
 
     &__details {
         flex: 1;
         display: flex;
         flex-direction: column;
-        
-        .CharacterCard {
-            width: 100%;
-            height: 100%;
+
+        .CharacterCard, .CharacterChip {
+            width: 33%;
+            max-height: 100%;
+            min-height: 100%;
+            min-width: 407px;
         }
     }
 }
