--- a/src/modules/PartyLoadout/components/SessionSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/SessionSidebar/index.scss
@@ -11,7 +11,7 @@
 
     .TopBar {
         padding: 0 0px;
-        background: rgba(0,0,0,0.4);
+        background: hsl(0, 0%, 15%);
         border-bottom: 1px solid black;
 
         & > div {
