--- a/src/modules/Battle/index.scss
+++ b/src/modules/Battle/index.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    background: hsl(0, 0, 24);
     &__body {
         display: flex;
         flex: 1;
