--- a/src/modules/Core/CharacterChip/index.scss
+++ b/src/modules/Core/CharacterChip/index.scss
@@ -1,3 +1,20 @@
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+.CharacterChipBg {
+    background-size: 400% 400% !important;
+    animation: Gradient 7s ease infinite;
+}
+
 .CharacterChip {
     width: 100%;
     height: 100%;
@@ -16,7 +33,7 @@
 
     &__top {
         display: flex;
-        background: linear-gradient(to bottom, rgba(0,0,0,0.54) 0%,rgba(0,0,0,0) 100%);
+        background: linear-gradient(to bottom, rgba(0,0,0,0.72) 0%,rgba(0,0,0,0) 100%);
     }
 
     &__bottom {
@@ -60,10 +77,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-
-        &--chip {
-            
-        }
     }
 
     &__name {
@@ -110,7 +123,8 @@
             }
 
             &--cooldown {
-                opacity: 0.36;
+                opacity: 0.54;
+                line-height: 18px;
                 position: absolute;
                 display: flex;
                 top: 8px;
