--- a/src/modules/PartyLoadout/components/CharacterSelectSidebar/components/CharacterAvatar/index.scss
+++ b/src/modules/PartyLoadout/components/CharacterSelectSidebar/components/CharacterAvatar/index.scss
@@ -1,11 +1,25 @@
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
 .CharacterAvatar {
+    background-size: 400% 400% !important;
+    animation: Gradient 7s ease infinite;
     position: relative;
     width: 100%;
     cursor: pointer;
     display: flex;
     justify-content: flex-start;
     box-sizing: border-box;
-    border: 1px solid rgba(255,255,255,0.24);
+    border: 1px solid rgba(255,255,255,0.36);
 
     &:after {
         content: '';
