--- a/src/modules/Battle/index.scss
+++ b/src/modules/Battle/index.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     height: 100%;
     background: hsl(0, 0, 24);
+    font-family: 'Roboto', 'Sans-serif';
     &__body {
         display: flex;
         flex: 1;
@@ -13,9 +14,8 @@
     .Room__search {
         height: 39px;
         line-height: 48px;
-        border: 1px solid rgba(0,0,0,0.12);
+        border: 1px solid rgba(0,0,0,1);
         margin-right: 4px;
-        border-radius: 4px;
         width: 290px;
         padding-left: 8px;
     }
@@ -26,10 +26,17 @@
         width: 407px;
         height: 100%;
         overflow-y: auto;
-        border-left: 1px solid rgba(0,0,0,0.12);
+        border-left: 1px solid rgba(0,0,0,1);
 
         &__body {
-            height: calc(100% - 56px);
+            height: calc(100% - 58px);
+        }
+    }
+
+    &__user {
+        &--name {
+            color: white;
+            
         }
     }
 }
