--- a/src/components/PackItem/index.scss
+++ b/src/components/PackItem/index.scss
@@ -74,24 +74,24 @@
         }
     }
     .PackItem__rarity--Masterwork {
-        background-color: hsl(268, 85%, 24%);
+        background-color: hsl(268, 45%, 30%);
         //transition: background-color 0.2s, background-position 0.2s ease-out;
         background:
         linear-gradient(115deg, transparent 75%, rgba(255,255,255,.05) 75%) 0 0,
         linear-gradient(245deg, transparent 75%, rgba(255,255,255,.05) 75%) 0 0,
         linear-gradient(115deg, transparent 75%, rgba(255,255,255,.05) 75%) 7px -15px,
         linear-gradient(245deg, transparent 75%, rgba(255,255,255,.05) 75%) 7px -15px,
-        hsl(268, 85%, 24%);
+        hsl(268, 45%, 30%);
         color: white;
 
         &:hover {
-            background-color: hsl(268, 80%, 29%);
+            background-color: hsl(268, 40%, 34%);
             background:
             linear-gradient(115deg, transparent 75%, rgba(255,255,255,.05) 75%) 0 0,
             linear-gradient(245deg, transparent 75%, rgba(255,255,255,.05) 75%) 0 0,
             linear-gradient(115deg, transparent 75%, rgba(255,255,255,.05) 75%) 7px -15px,
             linear-gradient(245deg, transparent 75%, rgba(255,255,255,.05) 75%) 7px -15px,
-            hsl(268, 80%, 29%);
+            hsl(268, 40%, 34%);
             background-position: 20% 20%
         }
     }
@@ -160,6 +160,8 @@
             }
     .PackItem__modifiers {
         background-color: rgba(0,0,0,0.46);
+        box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
+        box-sizing: border-box;
         color: black;
         padding: 8px;
         letter-spacing: 1px;
