--- a/src/modules/Battle/components/RoomChat/index.scss
+++ b/src/modules/Battle/components/RoomChat/index.scss
@@ -5,7 +5,7 @@
     font-family: 'Roboto', 'sans-serif';
 
     &__body {
-        background: rgba(0,0,0,0.72);
+        background: hsl(0,0,25%);
         color: white;
         flex: 1;
         overflow-y: auto;
@@ -27,7 +27,7 @@
 
     &__input {
         display: flex;
-        background: rgba(0,0,0,0.72);
+        background: hsl(0,0,25%);
         padding: 8px;
         textarea {
             flex: 1;
