--- a/src/modules/Battle/components/ZeroGuage/index.scss
+++ b/src/modules/Battle/components/ZeroGuage/index.scss
@@ -27,5 +27,9 @@
         font-weight: 900;
         box-sizing: border-box;
         border: 1px solid rgba(255,255,255,0.36);
+
+        svg {
+            margin-top: -3px;
+        }
     }
 }
