--- a/src/modules/PartyLoadout/components/SessionSidebar/index.scss
+++ b/src/modules/PartyLoadout/components/SessionSidebar/index.scss
@@ -14,18 +14,18 @@
         background: hsl(0, 0%, 15%);
         border-bottom: 1px solid black;
 
-        & > div {
+        & > div > div {
             text-align: center;
             width: 33%;
-            height: 56px;
-            line-height: 56px;
+            height: 54px;
+            line-height: 54px;
             cursor: pointer;
             font-weight: bold;
             color: rgba(255,255,255,255.72);
     
             &.active {
                 border-bottom: 8px solid rgba(255,255,255,0.54);
-                height: calc(100% - 8px)
+                height: 46px;
             }
         }
     }
