--- a/src/modules/Battle/index.scss
+++ b/src/modules/Battle/index.scss
@@ -26,7 +26,9 @@
         width: 407px;
         height: 100%;
         overflow-y: auto;
+        box-sizing: border-box;
         border-left: 1px solid rgba(0,0,0,1);
+        border-right: 1px solid rgba(0,0,0,1);
 
         &__body {
             height: calc(100% - 58px);
