--- a/src/modules/Core/Button/index.scss
+++ b/src/modules/Core/Button/index.scss
@@ -24,6 +24,12 @@
         border: 1px solid rgba(255,255,255,0.24);
         background-color:  hsl(106, 20%, 38%);
         font-size: 16px;
+        outline: none;
+        text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+
+        &:hover {
+            background-color:  hsl(106, 20%, 43%); 
+        }
 
         &:active {
             outline: none;
