--- a/src/modules/Battle/components/ZeroGuage/index.scss
+++ b/src/modules/Battle/components/ZeroGuage/index.scss
@@ -7,6 +7,7 @@
     pointer-events: none;
     box-sizing: border-box;
     border: 1px solid black;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
 
     &__fill {
         height: calc(100% - 2px);
@@ -29,6 +30,7 @@
 
         svg {
             margin-top: -3px;
+            filter: drop-shadow( 0px 1px 1px rgba(0, 0, 0, 0.54));
         }
     }
 }
