--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -53,4 +53,5 @@
     z-index: 2;
     // border-bottom: 4px solid rgba(255,255,255,0.72);
     background-color: rgba(255,255,255,0.12);
+    user-select: none;
 }
