--- a/src/modules/Battle/components/ZeroGuage/index.scss
+++ b/src/modules/Battle/components/ZeroGuage/index.scss
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     border: 1px solid black;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+    user-select: none;
 
     &__fill {
         height: calc(100% - 2px);
