--- a/src/modules/Core/Button/index.scss
+++ b/src/modules/Core/Button/index.scss
@@ -26,6 +26,7 @@
         font-size: 16px;
         outline: none;
         text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+        user-select: none;
 
         &:hover {
             background-color:  hsl(106, 20%, 43%); 
