more issue fixes

--- a/src/modules/Battle/index.scss
+++ b/src/modules/Battle/index.scss
@@ -15,7 +15,7 @@
         height: 39px;
         line-height: 48px;
         border: 1px solid rgba(0,0,0,1);
-        margin-right: 4px;
+        // margin-right: 4px;
         width: 290px;
         padding-left: 8px;
     }
