--- a/src/modules/BattleRoom/components/RoomChat/index.scss
+++ b/src/modules/BattleRoom/components/RoomChat/index.scss
@@ -21,12 +21,21 @@
 
         strong {
             margin-bottom: 4px;
+
+            &.creator {
+                color: hsl(44, 100, 45);
+            }
+
+            &.user {
+                color: hsl(268, 40%, 60%);
+            }
         }
 
         &__message {
             display: flex;
             flex-wrap: wrap;
             line-height: 1.5;
+            color: rgba(255,255,255,0.72);
             & > div {
                 margin-right: 4px;
             }
