armor values refactor

--- a/src/modules/BattleRoom/components/RoomChat/index.scss
+++ b/src/modules/BattleRoom/components/RoomChat/index.scss
@@ -21,6 +21,7 @@
 
         strong {
             margin-bottom: 4px;
+            text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
 
             &.creator {
                 color: hsl(44, 100, 45);
