--- a/src/modules/Core/Button/index.scss
+++ b/src/modules/Core/Button/index.scss
@@ -22,21 +22,42 @@
         padding: 0 16px;
         color: rgba(255,255,255,0.84);
         border: 1px solid rgba(255,255,255,0.24);
-        background-color:  hsl(106, 20%, 38%);
         font-size: 16px;
         outline: none;
         text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
         user-select: none;
 
-        &:hover {
-            background-color:  hsl(106, 20%, 43%); 
+        &.Button2--primary {
+            background-color:  hsl(106, 20, 38);
+            &:hover {
+                background-color:  hsl(106, 20, 43); 
+            }
+            &:active {
+                outline: none;
+                background-color:  hsl(106, 20, 38);
+            }
         }
 
-        &:active {
-            outline: none;
-            background-color:  hsl(106, 20%, 38%);
+        &.Button2--secondary {
+            background-color:  hsl(220, 44, 40);
+            &:hover {
+                background-color:  hsl(220, 44, 45);
+            }
+            &:active {
+                outline: none;
+                background-color:  hsl(220, 44, 40);
+            }
         }
 
-
+        &.Button2--important {
+            background-color:  hsl(40, 55, 35);
+            &:hover {
+                background-color:  hsl(39, 55, 40);
+            }
+            &:active {
+                outline: none;
+                background-color:  hsl(40, 55, 35);
+            }
+        }
     }
 }
