--- a/src/modules/Session/components/CharacterSelect/index.scss
+++ b/src/modules/Session/components/CharacterSelect/index.scss
@@ -1,4 +1,4 @@
-.CharacterSelectSidebar {
+.CharacterSelect {
     background-color: hsl(0, 0%, 15%);
     border: 1px solid rgba(0,0,0,1);
     border-right: none;
@@ -10,6 +10,13 @@
     max-height: 120px;
     // padding: 4px;
     display: flex;
+
+    &__helper {
+        flex: 1;
+        background: rgba(255,255,255,0.12);
+        margin: 4px;
+        border: 1px dashed rgba(255,255,255,0.24);
+    }
 
     .CharacterAvatar {
         box-shadow: none;
