--- a/src/modules/Session/components/CharacterSidebar/index.scss
+++ b/src/modules/Session/components/CharacterSidebar/index.scss
@@ -3,7 +3,7 @@
     overflow-y: auto;
     color: rgba(255,255,255,0.54);
     padding: 0px;
-    background: rgba(0,0,0,0.24);
+    background: hsl(0, 0%, 15%);
 
     &__empty {
         width: 100%;
