--- a/src/modules/Core/CharacterChip/index.scss
+++ b/src/modules/Core/CharacterChip/index.scss
@@ -111,6 +111,7 @@
                 display: block;
                 font-size: 16px;
                 margin-bottom: 4px;
+                font-weight: 600;
             }
 
             &--description {
