--- a/src/modules/Session/components/ItemSelectSidebar/index.scss
+++ b/src/modules/Session/components/ItemSelectSidebar/index.scss
@@ -47,6 +47,10 @@
                 width: 100%;
                 margin: 0;
                 padding: 0;
+                height: 50px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
     }
