--- a/src/modules/Auth/index.scss
+++ b/src/modules/Auth/index.scss
@@ -37,6 +37,7 @@
             box-sizing: border-box;
             user-select: none;
             border: 1px solid rgba(255,255,255,0.24);
+            box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
 
             &.active {
                 background-color: hsl(0,0,30%);
@@ -58,6 +59,7 @@
         &--border {
             padding: 16px;
             border: 1px solid rgba(255,255,255,0.24);
+            box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
             display: flex;
             flex-direction: column;
         }
