--- a/src/modules/Core/Input/index.scss
+++ b/src/modules/Core/Input/index.scss
@@ -12,6 +12,7 @@
         margin: 0;
         font-size: 16px;
         background-color: hsl(0,0,72%);
+        box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
         padding: 8px;
     }
 }
