--- a/src/modules/Core/TopBar/index.scss
+++ b/src/modules/Core/TopBar/index.scss
@@ -18,6 +18,7 @@
         justify-content: space-between;
         box-sizing: border-box;
         border: 1px solid rgba(255,255,255,0.12);
+        box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
         flex: 1;
     }
 
