--- a/src/modules/Session/components/ItemSelectSidebar/index.scss
+++ b/src/modules/Session/components/ItemSelectSidebar/index.scss
@@ -44,6 +44,7 @@
     
             & > div {
                 border: 1px solid rgba(255,255,255,0.24);
+                box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
                 width: 100%;
                 margin: 0;
                 padding: 0;
