--- a/src/modules/Core/CharacterChip/index.scss
+++ b/src/modules/Core/CharacterChip/index.scss
@@ -102,6 +102,7 @@
         flex-direction: column;
         box-shadow: 0px 0px 2px rgba(0,0,0,0.72);
         border: 1px solid rgba(255,255,255,1);
+        box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
 
         &__skill {
             position: relative;
