--- a/src/modules/BattleRoom/components/RoomChat/index.scss
+++ b/src/modules/BattleRoom/components/RoomChat/index.scss
@@ -61,6 +61,8 @@
             color: black;
             border: 1px solid rgba(255,255,255,0.24);
             background-color: hsl(0,0,72%);
+            box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
+            
             //border-radius: 8px;
             &::placeholder {
                 color: rgba(0,0,0,0.54);
