--- a/src/modules/Session/components/CharacterSelect/components/CharacterAvatar/index.scss
+++ b/src/modules/Session/components/CharacterSelect/components/CharacterAvatar/index.scss
@@ -32,10 +32,8 @@
         position: absolute;
         box-sizing: border-box;
         box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
-        width: calc(100% - 0px);
-        height: calc(100% - 0px);
-        //top: 1px;
-        //left: 1px;
+        width: 100%;
+        height: 100%;
 
         &.reverse {
             transform: scaleX(-1);
