--- a/src/modules/Session/components/SessionSidebar/index.scss
+++ b/src/modules/Session/components/SessionSidebar/index.scss
@@ -1,16 +1,16 @@
 .SessionSidebar {
-    border-left: 1px solid rgba(0,0,0,1);
+    border-left: 1px solid rgb(0,0,0);
     max-width: 407px;
     min-width: 407px;
     display: flex;
     flex-direction: column;
     min-height: 100%;
     max-height: 100%;
-    background: rgba(0,0,0,0.72);
+    background: hsl(0,0,15);
     font-family: 'Roboto', sans-serif;
 
     .TopBar {
-        padding: 0 0px;
+        padding: 0;
         background: hsl(0, 0%, 15%);
         border-bottom: 1px solid black;
 
