--- a/src/modules/BattleRoom/index.scss
+++ b/src/modules/BattleRoom/index.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    background: hsl(0, 0, 24);
+    background: hsl(0, 0%, 25%);
     font-family: 'Roboto', 'Sans-serif';
     &__body {
         display: flex;
