--- a/src/modules/Core/TopBar/index.scss
+++ b/src/modules/Core/TopBar/index.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     flex: 1;
     border: 1px solid black;
-    background: hsl(0, 0%, 15%);
+    background: linear-gradient(175deg, hsl(0,0%,17%) 0%,hsl(0,0%,15%) 100%);
     color: white;
 
     & > div {
