--- a/src/modules/BattleRoom/components/RoomChat/index.scss
+++ b/src/modules/BattleRoom/components/RoomChat/index.scss
@@ -11,6 +11,7 @@
         overflow-y: auto;
         box-sizing: border-box;
         border: 1px solid rgba(255,255,255,0.12);
+        box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
     }
 
     &__message {
