--- a/src/modules/Core/Button/index.scss
+++ b/src/modules/Core/Button/index.scss
@@ -27,6 +27,10 @@
         text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
         user-select: none;
 
+        &:active {
+            box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
+        }
+
         &.Button2--primary {
             background: linear-gradient(to bottom, hsl(106, 20, 38) 0%,hsl(106, 20, 35) 100%);
             &:hover {
