--- a/src/modules/Session/components/ItemSelectSidebar/index.scss
+++ b/src/modules/Session/components/ItemSelectSidebar/index.scss
@@ -43,6 +43,7 @@
     
             & > div {
                 border: 1px solid rgba(255,255,255,0.24);
+                background: hsl(0,0%,30%);
                 box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
                 width: 100%;
                 margin: 0;
