--- a/src/modules/Auth/index.scss
+++ b/src/modules/Auth/index.scss
@@ -1,10 +1,16 @@
 .Auth {
     background-color: hsl(0,0,15%);
-    min-height: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Roboto', 'sans-serif';
+
+    @media(max-width: 600px) {
+        height: calc(100% - 24px);
+        align-items: flex-start;
+        padding-top: 24px;
+    }
     
     &__main {
         color: white;
