--- a/src/modules/BattleRoom/index.scss
+++ b/src/modules/BattleRoom/index.scss
@@ -8,6 +8,7 @@
         display: flex;
         flex: 1;
         height: 100%;
+        overflow-y: auto;
         // background-color: rgba(0,0,0,0.12);
     }
 
