--- a/src/modules/Core/Button/index.scss
+++ b/src/modules/Core/Button/index.scss
@@ -74,5 +74,16 @@
                 background: linear-gradient(to bottom, hsl(40, 50%, 35%) 0%,hsl(40, 50%, 30%) 100%);
             }
         }
+
+        &.Button2--warning {
+            background: linear-gradient(to bottom, hsl(360, 30%, 46%) 0%,hsl(360, 30%, 41%) 100%);
+            &:hover {
+                background:  hsl(360, 30%, 49%) 
+            }
+            &:active {
+                outline: none;
+                background: linear-gradient(to bottom, hsl(360, 30%, 46%) 0%,hsl(360, 30%, 38%) 100%);
+            }
+        }
     }
 }
