--- a/src/modules/Session/components/CharacterSidebar/index.scss
+++ b/src/modules/Session/components/CharacterSidebar/index.scss
@@ -10,6 +10,7 @@
         text-align: center;
         height: 72px;
         line-height: 72px;
+        user-select: none;
     }
 
     & > div > div {
