--- a/src/modules/BattleRoom/index.scss
+++ b/src/modules/BattleRoom/index.scss
@@ -35,8 +35,13 @@
         }
     }
 
+    &__activeUser {
+        width: 100%;
+        justify-content: space-between;
+    }
+
     &__user {
-        
+        width: 100%;
         &--name {
             color: white;
             font-weight: bold;
