--- a/src/modules/BattleRoom/index.scss
+++ b/src/modules/BattleRoom/index.scss
@@ -38,6 +38,7 @@
     &__activeUser {
         width: 100%;
         justify-content: space-between;
+        border: 1px solid black;
     }
 
     &__user {
