--- a/src/modules/Core/PackItem/index.scss
+++ b/src/modules/Core/PackItem/index.scss
@@ -150,7 +150,8 @@
         box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
         box-sizing: border-box;
         color: black;
-        padding: 8px;
+        padding: 8px 16px;
+        text-indent: -8px;
         letter-spacing: 1px;
         margin-top: 8px;
         flex: 1;
