fixed skill ids

--- a/src/modules/Session/components/SessionSidebar/index.scss
+++ b/src/modules/Session/components/SessionSidebar/index.scss
@@ -21,12 +21,11 @@
             line-height: 54px;
             cursor: pointer;
             font-weight: bold;
-            color: rgba(255,255,255,255.72);
+            color: rgba(255,255,255,0.42);
             user-select: none;
     
             &.active {
-                border-bottom: 8px solid rgba(255,255,255,0.36);
-                height: 46px;
+                color: rgba(255,255,255,0.84)
             }
         }
     }
