--- a/src/modules/Core/PackItem/index.scss
+++ b/src/modules/Core/PackItem/index.scss
@@ -103,6 +103,16 @@
             hsl(40, 100, 30%);
         //background-size: 15px 30px;
         color: white;
+        &:hover {
+            background-color: hsl(40, 80, 30%);
+            background:
+                linear-gradient(115deg, transparent 75%, rgba(255,255,255,.05) 75%) -7px 15px,
+                linear-gradient(245deg, transparent 75%, rgba(255,255,255,.05) 75%) 0 0,
+                linear-gradient(115deg, transparent 75%, rgba(255,255,255,.05) 75%) 7px -15px,
+                linear-gradient(245deg, transparent 75%, rgba(255,255,255,.05) 75%) 14px -30px,
+                hsl(40, 100, 30%);
+                background-position: 20% 20%
+        }
     }
     .PackItem__rarity--BlackMarket {
         background-color: hsl(0, 0%, 13%);
