groundwork for battle turn execution

--- a/src/modules/Session/components/ItemSelectSidebar/index.scss
+++ b/src/modules/Session/components/ItemSelectSidebar/index.scss
@@ -60,7 +60,7 @@
         }
     }
 
-    .Pack_Item {
+    .Item {
         & > div {
             width: calc(100% - 3px) !important;
             border-right-width: 2px;
