--- a/src/modules/BattleRoom/components/ZeroGuage/index.scss
+++ b/src/modules/BattleRoom/components/ZeroGuage/index.scss
@@ -14,6 +14,7 @@
         position: absolute;
         top: 0;
         background: green;
+        transition: max-width 1s, min-width 1s;
     }
 
     &__content {
