--- a/src/modules/Core/Item/index.scss
+++ b/src/modules/Core/Item/index.scss
@@ -160,8 +160,8 @@
         // box-shadow: 0px 0px 2px rgba(0,0,0,1) inset;
         box-sizing: border-box;
         color: black;
-        padding: 8px 16px;
-        text-indent: -8px;
+        padding: 8px 8px 4px 16px;
+        // text-indent: -8px;
         letter-spacing: 1px;
         // margin-top: 8px;
         flex: 1;
@@ -169,12 +169,15 @@
         .PackItem__modifier--buff {
             color: greenyellow;
             margin-bottom: 4px;
+            display: block;
+            float: left;
+            margin-right: 8px;
         }
         .PackItem__modifier--debuff {
             color: lightcoral;
             margin-bottom: 4px;
-        }
-        & > div:last-child {
-            margin-bottom: 0;
+            display: block;
+            float: left;
+            margin-right: 8px;
         }
     }
