--- a/src/modules/Core/PackCharacterItemList/index.scss
+++ b/src/modules/Core/PackCharacterItemList/index.scss
@@ -2,7 +2,7 @@
     flex: 1;
     display: flex;
     width: 100%;
-    flex-direction: column;
+    flex-wrap: wrap;
 
     & > div {
         width:  100%;
@@ -12,7 +12,7 @@
         justify-content: stretch;
 
         & > div {
-            width: 50%;
+            width: 100%;
             min-height: 120px;
 
             @media(max-width: 1286px) {
@@ -28,6 +28,5 @@
         &:first-child > div {
             width: 100%;
         }
-
     }
 }
